--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,10 @@ jobs:
       github.event_name == 'push' || github.event.pull_request.head.repo.full_name !=
       github.repository
 
-    runs-on: ubuntu-latest
+    runs-on: {{matrix.os}}
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest ]
         python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
