--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skipsdist = True
 deps=
   coverage
 commands_pre =
-  python3 -m pip -q install -e .
+  python -m pip -q install .
 commands =
   coverage run -m unittest discover -s tests
 commands_post =
