refactor: finish typing hints for py-is_ipfs * add stubs to setup * add py.typed * update dev dependcies * add type testing to tox.ini * add basic mypy.ini

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,17 @@ deps=
   coverage
 commands_pre =
   python3 -m pip -q install -e .
+  ; python3 -m pip --quiet install -r requirements-dev.txt
 commands =
   coverage run -m unittest discover -s tests
 commands_post =
   coverage report --omit=tests/**,**__init__.py --show-missing
+
+[testenv:type]
+deps = 
+  mypy
+commands_pre =
+  python3 -m pip -q install -e .
+  python3 -m pip --quiet install -r requirements-dev.txt
+commands = 
+  python3 -m mypy is_ipfs
