--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,4 @@ jobs:
           python -m pip install --upgrade tox
       - name: Test with tox
         run: |
-          tox
+          tox -e ALL
