--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ commands_pre =
 commands =
   coverage run -m unittest discover -s tests
 commands_post =
-  coverage report --omit=tests/**,**__init__.py --show-missing
+  coverage report --omit=tests/*,__init__.py --show-missing
 
 [testenv:type]
 deps = 
