--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -18,8 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install --upgrade wheel
+          python -m pip install --upgrade pip wheel setuptools
 
       - name: Build wheels
         run: python setup.py bdist_wheel
